Ajout de la javadoc et petites modifications